# custom_msgs_demo

./: CHANGELOG.md  CMakeLists.txt  README.md  package.xml
msg/: DetectedFaces.msg  Leds.msg  Obstacle.msg
msg/monitoring/: Info.msg
msg/rtc/: MessageRTC.msg
msg/sensor/: Image64.msg
msg/ssh/: Heartbeat.msg
msg/state_machine/: State.msg  Transition.msg
msg/state_manager/: MachineDescription.msg  State.msg  Transition.msg
msg/tts/: TTSRequest.msg
